# actix-middleware-panic-reproduction

./: Cargo.toml  README.md
src/: authenticated_middleware.rs  lib.rs  main.rs
