[package]
name = "actix-middleware-panic-reproduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4.0-beta.9"
actix-web = { version = "4.1.0", features = ["rustls"] }
actix-session = { version = "0.7.0", features = ["cookie-session"] }
actix-service = { version = "2.0.2" }
actix-http = "3"
futures-util = "0.3"
tokio = {version="1", features=["full"]}